# jni-demo-SystemMonitor

./: README.md  pom.xml
hbdc-sysm-jni/: .gitignore  mvn.cmd  pom.xml
hbdc-sysm-jni/src/main/java/edu/scut/cs/hbdc/sysm/: SysmCacheObject.java  SysmProxy.java  SysmProxyCache.java
hbdc-sysm-jni/src/main/java/edu/scut/cs/hbdc/sysm/bean/: AbstractBean.java  CpuInfo.java  DiskUsage.java  MultiProcessCpu.java  NetConnection.java  NetInfo.java  NetRoute.java  ProcessExe.java  ProcessOwn.java  ResourceLimit.java
hbdc-sysm-jni/src/main/java/edu/scut/cs/hbdc/sysm/constant/: NetFlags.java
hbdc-sysm-jni/src/main/java/edu/scut/cs/hbdc/sysm/exception/: SysmException.java  SysmFileNotFoundException.java
hbdc-sysm-jni/src/main/java/edu/scut/cs/hbdc/sysm/hello/: Hello.java
hbdc-sysm-jni/src/main/java/edu/scut/cs/hbdc/sysm/jni/: ArchName.java  ArchNotSupportedException.java  LibFinder.java
hbdc-sysm-jni/src/main/java/edu/scut/cs/hbdc/sysm/query/: ProcessFinder.java
hbdc-sysm-jni/src/test/java/edu/scut/cs/hbdc/sysm/: SysmTest.java
hbdc-sysm-native/: CMakeLists.txt  mvn.cmd  pom.xml
hbdc-sysm-native/include/main/: javasysm_generated.h  sysm.h
hbdc-sysm-native/src/main/: javasysm.c  sysm.c  sysm_format.c  sysm_util.c  version.c
hbdc-sysm-native/src/test/: hello.c
sysm-jni/: pom.xml
sysm-jni/src/main/java/edu/scut/cs/hbdc/sysm/: ReferenceMap.java  Sysm.java  SysmLoader.java
sysm-native/: .gitignore  CMakeLists.txt  pom.xml
sysm-native/include/main/: javasysm.h  sysm_util.h
sysm-native/include/test/: javasysm_generated.h
(+26 files in other folders)
